--- a/quiz/css/border.css
+++ b/quiz/css/border.css
@@ -1,6 +1,9 @@
 /* Add a border around the image */
 .image-with-border {
     /* Border style: thick, solid line, color purple */
+    border-style: solid;
+    border-width: thick;
+    border-color: purple;
     border-radius: 5px; /* Optional: Add rounded corners for a softer look */
   }
 
