--- a/quiz/css/nav-hor.css
+++ b/quiz/css/nav-hor.css
@@ -1,10 +1,11 @@
 .nav {
   background-color: rgba(173, 216, 230, 0.97);
   text-align: center;
-  width: 100%;
+  padding: 15px;
 }
 
 .nav li {
-  display: block;
+  display: inline-block;
+  width: 10%;
   font-size: 25px;
 }
